Wrote the basic functionality of Frogger game

--- a/frogger/index.html
+++ b/frogger/index.html
@@ -10,5 +10,6 @@
 <div id="game_div">
 <canvas id="game" height="565" width="399"></canvas>
 </div>
+<p id="credit"><a href="http://foslock.github.com">Created by Foster Lockwood</a></p>
 </body>
 </html>
