--- a/where/index.html
+++ b/where/index.html
@@ -10,5 +10,11 @@
 <body onload="start_where()">
 	<div id="map_canvas">
 	</div>
+	<div id="info_container">
+		<p id="carmen_info">
+		</p>
+		<p id="waldo_info">
+		</p>
+	</div>
 </body>
 </html>
