Updated README and implemented features on Frogger for assignment 4.

--- a/frogger/index.html
+++ b/frogger/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta name="viewport" content="width=device-width; initial-scale=0.6; maximum-scale=0.6; user-scalable=0;" />
 <title>Frogger</title>
 <link rel="stylesheet" href="style.css">
+<script src="swipe.js"></script>
 <script src="game.js"></script>
 </head>
 <body onload="start_game()">
 <div id="game_div">
 <canvas id="game" height="565" width="399"></canvas>
 </div>
+<p>Play with the arrow keys</p>
+<br/>
+<p><a href="http://foslock.github.com">Created by Foster Lockwood</a></p>
 </body>
 </html>
