--- a/status_dom/profile.html
+++ b/status_dom/profile.html
@@ -4,27 +4,10 @@
 
 <head>
 <title>Fecesbook</title>
-<script>
-	var post_status = function() {
-		var status_div = document.getElementById('status');
-		var text = document.getElementById('msg').value;
-		var d = new Date();
-		var curr_day = d.getDate();
-	    var curr_month = d.getMonth() + 1; //Months are zero based
-	    var curr_year = d.getFullYear();
-	    var curr_hour = d.getHours();
-	    var curr_min = d.getMinutes();
-
-		var txtNode = document.createTextNode(curr_month + "/" + curr_day + "/" + curr_year + " " + curr_hour + ":" + curr_min + " - " + text); 
-		var p = document.createElement('p');
-		p.appendChild(txtNode);
-		status_div.insertBefore(p, status_div.firstChild);
-		document.getElementById('msg').value = "";
-	}
-</script>
+<script src="profile.js"></script>
 </head>
 
-<body>
+<body onload="bodyLoaded()">
 	<h1>Fecebook</h1>
 	<div id="nav">
 		<ul>
